// protofiles/loadbalancer.proto
syntax = "proto3";

package lb;

option go_package = "./lb";

// Enum for balancing policies.
enum BalancingPolicy {
  UNSPECIFIED = 0;
  PICK_FIRST = 1;
  ROUND_ROBIN = 2;
  LEAST_LOAD = 3;
}

// Request for backend registration.
message RegisterBackendRequest {
  string server_address = 1;
}

// Response for backend registration.
message RegisterBackendResponse {
  bool success = 1;
}

// Request to report backend load.
message ReportLoadRequest {
  string server_address = 1;
  int32 load = 2;
}

// Response for load report.
message ReportLoadResponse {
  bool success = 1;
}

// Request for getting the best backend.
message GetBestServerRequest {
  BalancingPolicy policy = 1;
}

// Response providing the selected backend.
message GetBestServerResponse {
  string server_address = 1;
}

// The Load Balancer service definition.
service LoadBalancer {
  rpc RegisterBackend(RegisterBackendRequest) returns (RegisterBackendResponse);
  rpc ReportLoad(ReportLoadRequest) returns (ReportLoadResponse);
  rpc GetBestServer(GetBestServerRequest) returns (GetBestServerResponse);
}
